Remove border hover to prevent jumping

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -148,9 +148,8 @@ body {
   color: black;
 
   &.clickable:hover {
-    background-color: black;
+    background-color: #262626;
     color: white;
-    border: 1px solid white;
   }
 }
 
